@@ -15,3 +15,16 @@ dependencies {
 
     testCompile libs.unit_tests
 }
+
+
+ext.moduleName = 'wiring'
+compileJava {
+    inputs.property("moduleName", moduleName)
+    doFirst {
+        options.compilerArgs.addAll([
+                '--module-path', classpath.asPath,
+                '--add-modules', moduleName
+        ])
+        classpath = files()
+    }
+}
